Fixes minor layout issues on mobile devices

--- a/webcompat/static/css/main.css
+++ b/webcompat/static/css/main.css
@@ -430,6 +430,9 @@ label, .label {
   font-weight: 700;
   font-size: inherit;
 }
+label {
+  float: left;
+}
 .label {
   padding-left: 0;
 }
@@ -489,14 +492,22 @@ form .button {
   white-space: nowrap;
 }
 .radio, .radio-inline {
-  padding-left: 8px;
+  padding-left: 15px;
   margin-right: 8px;
   margin-left: 8px;
   width:100%;
   height: 34px;
+  position: relative;
 }
 .radio label, .radio-inline label {
   font-weight: 300;
+  float: none;
+}
+.radio input,
+.radio-inline input {
+  position: absolute;
+  left: 10px;
+  top: 0px;
 }
 /* bootstrap override */
 .radio-inline + .radio-inline {
@@ -525,6 +536,8 @@ form .button {
 }
 .validation-wrapper {
   display: block;
+  clear: both;
+  position: relative;
 }
 .validation-wrapper::after {
   content: '';
@@ -532,8 +545,8 @@ form .button {
   width: 60px;
   height: 20px;
   position: absolute;
-  right: 25px;
-  top: 31px;
+  right: 12px;
+  top: 8px;
   background-repeat: no-repeat;
   background-size: contain;
 }
@@ -596,7 +609,6 @@ form .button {
   }
   footer {
     margin-left: -20px;
-    margin-right: -20px;
     padding-left: 20px;
     padding-right: 20px;
   }
@@ -627,6 +639,13 @@ form .button {
   .col-md-6.submit, .col-md-6 button {
     width: 100%;
   }
+  .has-error .help-inline {
+    float: none;
+    display: block;
+  }
+  label {
+    float: none;
+  }
 }
 @media all and (max-width: 450px) {
   .maincontent.container, footer .container, nav, form.cf {
@@ -652,10 +671,6 @@ form .button {
   footer {
     margin-top: 3em;
   }
-  .has-error .help-inline {
-    float: none;
-    display: block;
-  }
 }
 @media all and (max-width: 375px) {
   .footerright {
@@ -677,5 +692,14 @@ form .button {
   }
   #feedback .pull-right a {
     padding-right: 0 !important;
+  }
+  .row {
+    margin-left: -20px;
+    max-width: 320px;
+  }
+  footer {
+    margin-left: 0;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
